--- a/Assignments/Assignment3/main.html
+++ b/Assignments/Assignment3/main.html
@@ -10,11 +10,11 @@
 
 	<body>
     <div class="header">
-      <h1>Patimex</h1>
+      <h1>Patimex - The Greatest Wood Company</h1>
 
     </div>
     <div class="navbar">
-      <h4>For sale / About / Image Board / Contact</h4>
+      <h4><a href="main.html">For Sale</a> / <a href="https://www.google.com">About</a> / <a href="imageboard.html">Image Board</a> / <a href="imageboard.html">Contact</a></h4>
     </div>
 
 
