Added video, scaled main1 properly, added nav, added images, added hover and scrolling text

--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -5,6 +5,10 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Yuto Dunks</title>
 	<link href="style.css" type="text/css" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -12,6 +16,13 @@
     <div class="header">
       <h1>Yuto Horigome x Nike Dunks</h1>
     </div>
+		<div class="nav">
+
+				<a href="">Main Page / </a>
+				<a href="">Yuto / </a>
+				<a href="">Nike</a>
+
+		</div>
     <div class="main">
       <img id="img1" src="images/image-2.png" alt=""/>
 
@@ -19,15 +30,33 @@
 
     </div>
     <div class="video">
-      <video id="video1" width="50%" height="auto" autoplay muted>
+      <video id="video1"  width="50%" height="auto" autoplay muted loop>
         <source src="videos/NikeSBMain1.mov" type="video/mp4">
 
       </video>
-      <video id="video2" width="50%" height="auto" autoplay muted>
+      <video id="video2" onmouseover="changeVisOff()" onmouseleave="changeVisOn()" width="50%" height="auto" autoplay muted loop>
         <source src="videos/NikeSBMain2.mov" type="video/mp4">
 
       </video>
     </div>
+
+		<div class="banner">
+			<p>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+			</p>
+		</div>
+		<div class="main2">
+			<img src="images/flower1.jpg" alt=""/>
+			<img src="images/flower2.jpg" alt=""/>
+			<img src="images/flower3.jpg" alt=""/>
+		</div>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 
