fixed sizing issues!

--- a/Assignments/Assignment4/mainAbsolute.html
+++ b/Assignments/Assignment4/mainAbsolute.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Yuto Dunks</title>
-	<link href="style.css" type="text/css" rel="stylesheet" />
+	<link href="styleAbsolute.css" type="text/css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
@@ -49,14 +49,10 @@
 				<span>Yuto Horigome x Nike Dunks x</span>
 				<span>Yuto Horigome x Nike Dunks x</span>
 				<span>Yuto Horigome x Nike Dunks x</span>
-				<span>Yuto Horigome</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
 			</p>
 		</div>
-		<div class="main2">
-			<img src="images/flower1.jpg" alt=""/>
-			<img src="images/flower2.jpg" alt=""/>
-			<img src="images/flower3.jpg" alt=""/>
-		</div>
+		
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 
