Added Nike html and a bunch of gifs

--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -20,13 +20,13 @@
 
 				<a href="main.html">Main Page / </a>
 				<a href="yuto.html">Yuto / </a>
-				<a href="">Nike</a>
+				<a href="nike.html">Nike</a>
 
 		</div>
     <div class="main">
-      <img id="img1" src="images/image-2.png" alt=""/>
+      <img id="img1" src="images/main/image-2.png" alt=""/>
 
-      <img id="img2" src="images/image-3.png" alt=""/>
+      <img id="img2" src="images/main/image-3.png" alt=""/>
 
     </div>
     <div class="video">
@@ -53,9 +53,9 @@
 			</p>
 		</div>
 		<div class="main2">
-			<img src="images/flower1.jpg" alt=""/>
-			<img src="images/flower2.jpg" alt=""/>
-			<img src="images/flower3.jpg" alt=""/>
+			<img src="images/main/flower1.jpg" alt=""/>
+			<img src="images/main/flower2.jpg" alt=""/>
+			<img src="images/main/flower3.jpg" alt=""/>
 		</div>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
