--- a/Assignments/Assignment4/nike.html
+++ b/Assignments/Assignment4/nike.html
@@ -4,17 +4,18 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Yuto Dunks</title>
-	<link href="styleyuto.css" type="text/css" rel="stylesheet" />
+	<link href="stylenike.css" type="text/css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Gasoek+One&display=swap" rel="stylesheet">
 
 
 </head>
 
   <body>
     <div class="header">
-      <h1>Yuto Horigome</h1>
+      <h1>Nike</h1>
     </div>
 		<div class="nav">
 
@@ -24,8 +25,31 @@
 
 		</div>
 		<div class="main">
-			<img src="images/yutowhite.png" alt="">
-			<img src="images/board.webp" alt="">
+			<img src="images/nike/Woosh.png" alt="">
+      <h1>Just Do It</h1>
+      <img id="globe1" src="images/nike/Globe1.png" alt="">
+      <img id="globe2" src="images/nike/Globe1.png" alt="">
+      <img id="eyes" src="images/nike/eyes.png" alt="">
+      <div class="gif">
+        <img id="gif1" src="images/nike/s1.gif" alt="">
+        <img id="gif2" src="images/nike/s2.gif" alt="">
+        <img id="gif3" src="images/nike/s3.gif" alt="">
+        <img id="gif4" src="images/nike/s4.gif" alt="">
+        <img id="gif5" src="images/nike/s5.gif" alt="">
+        <img id="gif6" src="images/nike/s6.gif" alt="">
+        <img id="gif7" src="images/nike/s7.gif" alt="">
+        <img id="gif8" src="images/nike/s8.gif" alt="">
+        <img id="gif9" src="images/nike/s9.gif" alt="">
+        <img id="gif10" src="images/nike/s10.gif" alt="">
+        <img id="gif11" src="images/nike/s11.gif" alt="">
+        <img id="gif12" src="images/nike/s12.gif" alt="">
+        <img id="gif13" src="images/nike/s13.gif" alt="">
+        <img id="gif14" src="images/nike/s14.gif" alt="">
+        <img id="gif15" src="images/nike/s15.gif" alt="">
+        
+      </div>
+
+
 		</div>
 
     <script type="text/javascript" src="scripts.js"></script>
