--- a/Assignments/Assignment4/yuto.html
+++ b/Assignments/Assignment4/yuto.html
@@ -24,7 +24,7 @@
 
 		</div>
 		<div class="main">
-			<img src="images/yutowhite.png" alt="">
+			<img src="images/yuto/yutowhite.png" alt="">
 			<img src="images/board.webp" alt="">
 		</div>
 
