Added Stars to nike.html

--- a/Assignments/Assignment4/nike.html
+++ b/Assignments/Assignment4/nike.html
@@ -46,8 +46,18 @@
         <img id="gif13" src="images/nike/s13.gif" alt="">
         <img id="gif14" src="images/nike/s14.gif" alt="">
         <img id="gif15" src="images/nike/s15.gif" alt="">
-        
       </div>
+      <div class="sparkle">
+        <img id="sparkle1" src="images/nike/Sparkle.png" alt="">
+        <img id="sparkle2" src="images/nike/Sparkle.png" alt="">
+        <img id="sparkle3" src="images/nike/Sparkle.png" alt="">
+        <img id="sparkle4" src="images/nike/Sparkle.png" alt="">
+        <img id="sparkle5" src="images/nike/Sparkle.png" alt="">
+      </div>
+      <div class="Main2">
+        <img id="tech1" src="images/nike/tech.jpeg" alt="">
+      </div>
+
 
 
 		</div>
