--- a/Assignments/Assignment4/yuto.html
+++ b/Assignments/Assignment4/yuto.html
@@ -25,9 +25,47 @@
 		</div>
 		<div class="main">
 			<img src="images/yuto/yutowhite.png" alt="">
-			<img src="images/board.webp" alt="">
-		</div>
 
+			<p>Born on January 7th, 1999, in Tokyo Japan, Yuto Horigome was sitting on a skateboard before he was standing on one. His father Ryota Horigome, a former street skateboarder, introduced his young son to the sport before he could walk.
+
+Soon enough the board switched from toy to means of expression and Horigome began spending his days learning how to skate at the local “Amazing square” skate park in Tokyo.
+
+Age 15, Horigome began entering skateboarding contests in America, drawing widespread attention for his ability to take on massive rails and gaps. Sensing California was the place to be to progress his career, in 2016 Horigome moved Stateside full-time.
+
+His name lit up in lights when he became the first Japanese athlete to win a Street League Skateboarding event in May 2018. Demonstrating that it was by no means a fluke, the Tokyo-born skater followed his London title by going on to win a further two events later in the same year.
+
+In 2019 things only got better for Horigome. He won two Olympic qualifying events and finished runner-up in the World Championships behind three-time defending champion and world number one, America Nyjah Huston.</p>
+			<img id="board" src="images/yuto/board.png" alt="">
+			<img id="sparkle1" src="images/yuto/sparkle.png" alt="">
+			<img id="sparkle2" src="images/yuto/sparkle.png" alt="">
+
+		</div>
+		<div class="world-time">
+			<div class="estClass">
+				<span>Eastern Standard Time:</span>
+				<br/>
+				<span id="est"></span>
+			</div>
+			<div class="cetClass">
+				<span>Central European Time</span>
+				<br/>
+				<span id="cet"></span>
+			</div>
+			<div class="jstClass">
+				<span>Japan Standard Time</span>
+				<br/>
+				<span id="jst"></span>
+			</div>
+		</div>
+		<div class="main2">
+			<img id="sparkle3" src="images/yuto/sparkle.png" alt="">
+
+			<img id="sparkle4" src="images/yuto/sparkle.png" alt="">
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2gI9ehKenvyiBmFgahwNLe?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<img id="film1" src="images/yuto/yutoblack.jpg" alt="">
+
+		</div>
+		<img id="film2" src="images/yuto/tokyofilm1.jpeg" alt="">
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 
