--- a/Assignments/Assignment4/images/yuto/Yuto Dunks.html
+++ b/Assignments/Assignment4/images/yuto/Yuto Dunks.html
@@ -18,9 +18,9 @@
     </div>
 		<div class="nav">
 
-			<a href="main.html"><span id="mainPage">Main Page</span> / </a>
-			<a href="yuto.html"><span id="yutoPage">Yuto</span> / </a>
-			<a href="nike.html"><span id="nikePage">Nike</span></a>
+				<a href="main.html">Main Page / </a>
+				<a href="yuto.html">Yuto / </a>
+				<a href="nike.html">Nike</a>
 
 		</div>
 		<div class="main">
@@ -34,7 +34,7 @@ Age 15, Horigome began entering skateboarding contests in America, drawing wides
 
 His name lit up in lights when he became the first Japanese athlete to win a Street League Skateboarding event in May 2018. Demonstrating that it was by no means a fluke, the Tokyo-born skater followed his London title by going on to win a further two events later in the same year.
 
-In 2019 things only got better for Horigome. He won two Olympic qualifying events and finished runner-up in the World Championships behind three-time defending champion and world number one, America Nyjah Huston. <br/> olympics.com/en/athletes/yuto-horigome</p>
+In 2019 things only got better for Horigome. He won two Olympic qualifying events and finished runner-up in the World Championships behind three-time defending champion and world number one, America Nyjah Huston. <br/> <span id="olympics">olympics.com/en/athletes/yuto-horigome</span></p>
 			<img id="board" src="images/yuto/board.png" alt="">
 			<img id="sparkle1" src="images/yuto/sparkle.png" alt="">
 			<img id="sparkle2" src="images/yuto/sparkle.png" alt="">
