--- a/Assignments/Assignment4/nike.html
+++ b/Assignments/Assignment4/nike.html
@@ -19,9 +19,9 @@
     </div>
 		<div class="nav">
 
-				<a href="main.html">Main Page / </a>
-				<a href="yuto.html">Yuto / </a>
-				<a href="nike.html">Nike</a>
+			<a href="main.html"><span id="mainPage">Main Page</span> / </a>
+			<a href="yuto.html"><span id="yutoPage">Yuto</span> / </a>
+			<a href="nike.html"><span id="nikePage">Nike</span></a>
 
 		</div>
 		<div class="main">
@@ -60,6 +60,23 @@
 						Nike, Inc. is an American multinational association that is involved in the design, development, manufacturing and worldwide marketing and sales of apparel, footwear, accessories, equipment and services. The company’s world headquarters are situated near Beaverton, Oregon, in the Portland metropolitan area (USA). It is a major producer of sports equipment and one of the world’s largest suppliers of athletic shoes and apparel. It employs more than 44,000 people worldwide and in 2014 the brand alone was valued as $19 billion (€17,5 billion), making it the most valuable brand between sports businesses.Founded by Bill Bowerman and Phil Knight on January 25 1964, as Blue Ribbon Sports, the company became officially Nike, Inc. on May 30 1971. The company was named after the Greek goddess of victory, Nike (Νίκη). Apart from its own brand, Nike market its products under Nike Pro, Nike+, Nike Golf, Nike Blazers, Air Jordan, Air Max and other as well as subsidiaries including brands  Jordan, Hurley Int. and Converse. Nike sponsors many high-profile athletes and sports teams around the world, with the highly recognized trademarks of “Just Do It” and the Swoosh logo (which represents the wing of the Greek goddess Nike).
 				</p>
 				<p>nikecompanyblog.wordpress.com/about-us</p>
+				<div class="world-time">
+					<div class="estClass">
+						<span>Eastern Standard Time:</span>
+						<br/>
+						<span id="est"></span>
+					</div>
+					<div class="cetClass">
+						<span>Central European Time</span>
+						<br/>
+						<span id="cet"></span>
+					</div>
+					<div class="jstClass">
+						<span>Japan Standard Time</span>
+						<br/>
+						<span id="jst"></span>
+					</div>
+				</div>
 				<img src="images/nike/nikebanner.jpg" alt="">
       </div>
 
