--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -1,16 +1,17 @@
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+		<title>Yuto Dunks</title>
+		<link href="style.css" type="text/css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 
-<head>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Yuto Dunks</title>
-	<link href="style.css" type="text/css" rel="stylesheet" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/path/to/flickity.css" media="screen">
 
-</head>
+	</head>
 
   <body>
     <div class="header">
