--- a/Assignments/Assignment4/yuto.html
+++ b/Assignments/Assignment4/yuto.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Yuto Dunks</title>
 	<link href="styleyuto.css" type="text/css" rel="stylesheet" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet"/>
 
 
 </head>
@@ -24,7 +24,7 @@
 
 		</div>
 		<div class="main">
-			<img src="images/yuto/yutowhite.png" alt="">
+			<img src="images/yuto/yutowhite.png" alt=""/>
 
 			<p>Born on January 7th, 1999, in Tokyo Japan, Yuto Horigome was sitting on a skateboard before he was standing on one. His father Ryota Horigome, a former street skateboarder, introduced his young son to the sport before he could walk.
 
@@ -35,9 +35,9 @@ Age 15, Horigome began entering skateboarding contests in America, drawing wides
 His name lit up in lights when he became the first Japanese athlete to win a Street League Skateboarding event in May 2018. Demonstrating that it was by no means a fluke, the Tokyo-born skater followed his London title by going on to win a further two events later in the same year.
 
 In 2019 things only got better for Horigome. He won two Olympic qualifying events and finished runner-up in the World Championships behind three-time defending champion and world number one, America Nyjah Huston. <br/> olympics.com/en/athletes/yuto-horigome</p>
-			<img id="board" src="images/yuto/board.png" alt="">
-			<img id="sparkle1" src="images/yuto/sparkle.png" alt="">
-			<img id="sparkle2" src="images/yuto/sparkle.png" alt="">
+			<img id="board" src="images/yuto/board.png" alt=""/>
+			<img id="sparkle1" src="images/yuto/sparkle.png" alt=""/>
+			<img id="sparkle2" src="images/yuto/sparkle.png" alt=""/>
 
 		</div>
 		<div class="world-time">
@@ -58,14 +58,14 @@ In 2019 things only got better for Horigome. He won two Olympic qualifying event
 			</div>
 		</div>
 		<div class="main2">
-			<img id="sparkle3" src="images/yuto/sparkle.png" alt="">
+			<img id="sparkle3" src="images/yuto/sparkle.png" alt=""/>
 
-			<img id="sparkle4" src="images/yuto/sparkle.png" alt="">
+			<img id="sparkle4" src="images/yuto/sparkle.png" alt=""/>
 			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2gI9ehKenvyiBmFgahwNLe?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			<img id="film1" src="images/yuto/yutoblack.jpg" alt="">
+			<img id="film1" src="images/yuto/yutoblack.jpg" alt=""/>
 
 		</div>
-		<img id="film2" src="images/yuto/tokyofilm1.jpeg" alt="">
+		<img id="film2" src="images/yuto/tokyofilm1.jpeg" alt=""/>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 
