--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -1,90 +1,98 @@
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Yuto Dunks</title>
-	<link href="stylenike.css" type="text/css" rel="stylesheet" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Gasoek+One&display=swap" rel="stylesheet">
+	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+		<title>Yuto Dunks</title>
+		<link href="style.css" type="text/css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 
 
-</head>
+	</head>
 
   <body>
     <div class="header">
-      <h1>Nike</h1>
+      <h1>Yuto Horigome x Nike Dunks</h1>
     </div>
 		<div class="nav">
 
-			<a href="main.html"><span id="mainPage">Main Page</span> / </a>
-			<a href="yuto.html"><span id="yutoPage">Yuto</span> / </a>
-			<a href="nike.html"><span id="nikePage">Nike</span></a>
-			<!-- TODO:  -->
-		</div>
-		<div class="main">
-			<img src="images/nike/Woosh.png" alt="">
-      <h1>Just Do It</h1>
-      <img id="globe1" src="images/nike/Globe1.png" alt="">
-      <img id="globe2" src="images/nike/Globe1.png" alt="">
-      <img id="eyes" src="images/nike/eyes.png" alt="">
-      <div class="gif">
-        <img id="gif1" src="images/nike/s1.gif" alt="">
-        <img id="gif2" src="images/nike/s2.gif" alt="">
-        <img id="gif3" src="images/nike/s3.gif" alt="">
-        <img id="gif4" src="images/nike/s4.gif" alt="">
-        <img id="gif5" src="images/nike/s5.gif" alt="">
-        <img id="gif6" src="images/nike/s6.gif" alt="">
-        <img id="gif7" src="images/nike/s7.gif" alt="">
-        <img id="gif8" src="images/nike/s8.gif" alt="">
-        <img id="gif9" src="images/nike/s9.gif" alt="">
-        <img id="gif10" src="images/nike/s10.gif" alt="">
-        <img id="gif11" src="images/nike/s11.gif" alt="">
-        <img id="gif12" src="images/nike/s12.gif" alt="">
-        <img id="gif13" src="images/nike/s13.gif" alt="">
-        <img id="gif14" src="images/nike/s14.gif" alt="">
-        <img id="gif15" src="images/nike/s15.gif" alt="">
-      </div>
-      <div class="sparkle">
-        <img id="sparkle1" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle2" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle3" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle4" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle5" src="images/nike/Sparkle.png" alt="">
-      </div>
-      <div class="Main2">
-        <img id="tech1" src="images/nike/tech1.png" alt="">
-				<p id="p">
-						Nike, Inc. is an American multinational association that is involved in the design, development, manufacturing and worldwide marketing and sales of apparel, footwear, accessories, equipment and services. The company’s world headquarters are situated near Beaverton, Oregon, in the Portland metropolitan area (USA). It is a major producer of sports equipment and one of the world’s largest suppliers of athletic shoes and apparel. It employs more than 44,000 people worldwide and in 2014 the brand alone was valued as $19 billion (€17,5 billion), making it the most valuable brand between sports businesses.Founded by Bill Bowerman and Phil Knight on January 25 1964, as Blue Ribbon Sports, the company became officially Nike, Inc. on May 30 1971. The company was named after the Greek goddess of victory, Nike (Νίκη). Apart from its own brand, Nike market its products under Nike Pro, Nike+, Nike Golf, Nike Blazers, Air Jordan, Air Max and other as well as subsidiaries including brands  Jordan, Hurley Int. and Converse. Nike sponsors many high-profile athletes and sports teams around the world, with the highly recognized trademarks of “Just Do It” and the Swoosh logo (which represents the wing of the Greek goddess Nike).
-				</p>
-				<p>nikecompanyblog.wordpress.com/about-us</p>
-				<div class="world-time">
-					<div class="estClass">
-						<span>Eastern Standard Time:</span>
-						<br/>
-						<span id="est"></span>
-					</div>
-					<div class="cetClass">
-						<span>Central European Time</span>
-						<br/>
-						<span id="cet"></span>
-					</div>
-					<div class="jstClass">
-						<span>Japan Standard Time</span>
-						<br/>
-						<span id="jst"></span>
-					</div>
-				</div>
-				<img src="images/nike/nikebanner.jpg" alt="">
-      </div>
-
-
+				<a href="main.html"><span id="mainPage">Main Page</span> / </a>
+				<a href="yuto.html"><span id="yutoPage">Yuto</span> / </a>
+				<a href="nike.html"><span id="nikePage">Nike</span></a>
 
 		</div>
+    <div class="main">
+      <img id="img1" src="images/main/image-2.png" alt=""/>
 
-    <script type="text/javascript" src="scripts.js"></script>
+      <img id="img2" src="images/main/image-3.png" alt=""/>
+
+    </div>
+    <div class="video">
+      <video id="video1"  width="50%" height="auto" autoplay muted loop>
+        <source src="videos/NikeSBMain1.mov" type="video/mp4">
+
+      </video>
+      <video id="video2" onmouseover="changeVisOff()" onmouseleave="changeVisOn()" width="50%" height="auto" autoplay muted loop>
+        <source src="videos/NikeSBMain2.mov" type="video/mp4">
+
+      </video>
+    </div>
+
+		<div class="banner">
+			<p id="animate">
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome x Nike Dunks x</span>
+				<span>Yuto Horigome</span>
+			</p>
+		</div>
+		<div class="main2">
+			<div class="text">
+				<p id="p1">With a mix of top-shelf tech and unmatched poise, Yuto Horigome never stops leveling up. The first person to take home skateboarding gold and set off a sweep for Japan, Yuto embraces and owns every moment with a potent mix of generational skill and quiet determination. Much anticipated like every Yuto moment, his first Dunk colorway goes back to his roots and most importantly, the pure fun that grounds his skateboarding.</p>
+				<p id="p2">Built from premium materials the Nike SB Dunk Low Pro Yuto Horigome celebrates his hometown with a symbolic colorway handpicked by Yuto. Inside and out, Yuto’s Dunk is an homage to Ōjima Komatsugawa Park in Tokyo, Japan—the place that defined his early days of skating and sparked his journey. From the marble benches to the rich cherry blossoms that light up Komatsugawa’s paths, the premium suede and leather upper features washed hues that emulate the colors of Yuto’s youth. Featuring embroidered feathers artwork designed by Japanese artist Verdy on the heel and tongue detail, and cherry blossom renderings on the insoles, the Yuto Horigome Dunk Low also comes packaged in a custom box and offers three tonal lace options.</p>
+				<p id="p3">www.nikesb.com/the-vault/sail-box-era/yuto</p>
+			</div>
+			<img id="flower1" src="images/main/flower1.jpg" alt=""/>
+			<img id="landscape" src="images/main/landscapeShoe.jpeg" alt="">
+		</div>
+		<div class="world-time">
+			<div class="estClass">
+				<span>Eastern Standard Time:</span>
+				<br/>
+				<span id="est"></span>
+			</div>
+			<div class="cetClass">
+				<span>Central European Time</span>
+				<br/>
+				<span id="cet"></span>
+			</div>
+			<div class="jstClass">
+				<span>Japan Standard Time</span>
+				<br/>
+				<span id="jst"></span>
+			</div>
+		</div>
+		<div class="row">
+			<img class="column" src="images/main/collageYuto1.jpeg" alt="">
+			<img class="column" src="images/main/collageYuto2.jpeg" alt="">
+			<img class="column" src="images/main/collageYuto3.jpeg" alt="">
+			<img class="column" src="images/main/collageYuto4.jpeg" alt="">
+		</div>
+		<h6 id="endcard">Yuto Horigome x Nike Dunks</h6>
+		<div class="row2">
+			<img class="column2" src="images/main/2collageYuto1.jpeg" alt="">
+			<img class="column2" src="images/main/2collageYuto2.jpeg" alt="">
+			<img class="column2" src="images/main/2collageYuto3.jpeg" alt="">
+			<img class="column2" src="images/main/2collageYuto4.jpeg" alt="">
+		</div>
+		<script src="scripts.js"></script>
   </body>
 
 </html>
