added images in replacement of videos

--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -31,14 +31,9 @@
 
     </div>
     <div class="video">
-      <video id="video1"  width="50%" height="auto" autoplay muted loop>
-        <source src="videos/NikeSBMain1.mov" type="video/mp4">
+      <img id="video1" src="videos/NikeSBMain1.jpeg" alt=""/>
 
-      </video>
-      <video id="video2" onmouseover="changeVisOff()" onmouseleave="changeVisOn()" width="50%" height="auto" autoplay muted loop>
-        <source src="videos/NikeSBMain2.mov" type="video/mp4">
-
-      </video>
+      <img id="video2" onmouseover="changeVisOff()" onmouseleave="changeVisOn()" src="videos/NikeSBMain2.jpeg" alt=""/>
     </div>
 
 		<div class="banner">
