Deleted Sparkle, changes to style.css in main

--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 		<title>Yuto Dunks</title>
-		<link href="styleAbsolute.css" type="text/css" rel="stylesheet" />
+		<link href="style.css" type="text/css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
