still trying to fix sparkle

--- a/Assignments/Assignment4/yuto.html
+++ b/Assignments/Assignment4/yuto.html
@@ -36,8 +36,8 @@ His name lit up in lights when he became the first Japanese athlete to win a Str
 
 In 2019 things only got better for Horigome. He won two Olympic qualifying events and finished runner-up in the World Championships behind three-time defending champion and world number one, America Nyjah Huston. <br/> olympics.com/en/athletes/yuto-horigome</p>
 			<img id="board" src="images/yuto/board.png" alt=""/>
-			<img id="sparkle1" src="images/yuto/sparkle.png" alt=""/>
-			<img id="sparkle2" src="images/yuto/sparkle.png" alt=""/>
+			<img id="sparkle1" src="images/yuto/Sparkle.png" alt=""/>
+			<img id="sparkle2" src="images/yuto/Sparkle.png" alt=""/>
 
 		</div>
 		<div class="world-time">
