--- a/Assignments/Assignment4/yuto.html
+++ b/Assignments/Assignment4/yuto.html
@@ -58,9 +58,9 @@ In 2019 things only got better for Horigome. He won two Olympic qualifying event
 			</div>
 		</div>
 		<div class="main2">
-			<img id="sparkle3" src="images/yuto/sparkle.png" alt=""/>
+			<img id="sparkle3" src="images/yuto/Sparkle.png" alt=""/>
 
-			<img id="sparkle4" src="images/yuto/sparkle.png" alt=""/>
+			<img id="sparkle4" src="images/yuto/Sparkle.png" alt=""/>
 			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2gI9ehKenvyiBmFgahwNLe?utm_source=generator&theme=0" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			<img id="film1" src="images/yuto/yutoblack.jpg" alt=""/>
 
