trying a cookie alert

--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -88,6 +88,7 @@
 			<img class="column2" src="images/main/2collageYuto4.jpeg" alt="">
 		</div>
 		<script src="scripts.js"></script>
+		<script src="mainalert.js"></script>
   </body>
 
 </html>
