Fixed all errors, added hrefs to the top of each pages

--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -6,14 +6,15 @@
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 		<title>Yuto Dunks</title>
 		<link href="style.css" type="text/css" rel="stylesheet" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com"/>
+		<link rel="preconnect" href="https://fonts.gstatic.com"/>
+		<link href="https://fonts.googleapis.com/css2?family=Creepster" rel="stylesheet"/>
 
 
 	</head>
 
   <body>
+		<a name="TopPageAnchor"/>
     <div class="header">
       <h1>Yuto Horigome x Nike Dunks</h1>
     </div>
@@ -25,15 +26,15 @@
 
 		</div>
     <div class="main">
-      <img id="img1" src="images/main/image-2.png" alt=""/>
+      <img id="img1" src="images/main/image-2.png" alt="Image of yuto horigome shoe"/>
 
-      <img id="img2" src="images/main/image-3.png" alt=""/>
+      <img id="img2" src="images/main/image-3.png" alt="Image of yuto horigome shoe"/>
 
     </div>
-    <div class="video">
-      <img id="video1" src="videos/NikeSBMain1.jpeg" alt=""/>
+    <div class="background">
+      <img id="back-img1" src="videos/NikeSBMain1.jpeg" alt="background image of yuto horigome skating"/>
 
-      <img id="video2" onmouseover="changeVisOff()" onmouseleave="changeVisOn()" src="videos/NikeSBMain2.jpeg" alt=""/>
+      <img id="back-img2" onmouseover="changeVisOff()" onmouseleave="changeVisOn()" src="videos/NikeSBMain2.jpeg" alt="background image of yuto horigome skating"/>
     </div>
 
 		<div class="banner">
@@ -54,8 +55,8 @@
 				<p id="p2">Built from premium materials the Nike SB Dunk Low Pro Yuto Horigome celebrates his hometown with a symbolic colorway handpicked by Yuto. Inside and out, Yuto’s Dunk is an homage to Ōjima Komatsugawa Park in Tokyo, Japan—the place that defined his early days of skating and sparked his journey. From the marble benches to the rich cherry blossoms that light up Komatsugawa’s paths, the premium suede and leather upper features washed hues that emulate the colors of Yuto’s youth. Featuring embroidered feathers artwork designed by Japanese artist Verdy on the heel and tongue detail, and cherry blossom renderings on the insoles, the Yuto Horigome Dunk Low also comes packaged in a custom box and offers three tonal lace options.</p>
 				<p id="p3">www.nikesb.com/the-vault/sail-box-era/yuto</p>
 			</div>
-			<img id="flower1" src="images/main/flower1.jpg" alt=""/>
-			<img id="landscape" src="images/main/landscapeShoe.jpeg" alt="">
+			<img id="flower1" src="images/main/flower1.jpg" alt="image of yuto dunks by cherry blossoms"/>
+			<img id="landscape" src="images/main/landscapeShoe.jpeg" alt="landscape shot of yuto dunks"/>
 		</div>
 		<div class="world-time">
 			<div class="estClass">
@@ -75,20 +76,21 @@
 			</div>
 		</div>
 		<div class="row">
-			<img class="column" src="images/main/collageYuto1.jpeg" alt="">
-			<img class="column" src="images/main/collageYuto2.jpeg" alt="">
-			<img class="column" src="images/main/collageYuto3.jpeg" alt="">
-			<img class="column" src="images/main/collageYuto4.jpeg" alt="">
+			<img class="column" src="images/main/collageYuto1.jpeg" alt="Product photos of yuto dunks"/>
+			<img class="column" src="images/main/collageYuto2.jpeg" alt="Product photos of yuto dunks"/>
+			<img class="column" src="images/main/collageYuto3.jpeg" alt="Product photos of yuto dunks"/>
+			<img class="column" src="images/main/collageYuto4.jpeg" alt="Product photos of yuto dunks"/>
 		</div>
 		<h6 id="endcard">Yuto Horigome x Nike Dunks</h6>
 		<div class="row2">
-			<img class="column2" src="images/main/2collageYuto1.jpeg" alt="">
-			<img class="column2" src="images/main/2collageYuto2.jpeg" alt="">
-			<img class="column2" src="images/main/2collageYuto3.jpeg" alt="">
-			<img class="column2" src="images/main/2collageYuto4.jpeg" alt="">
+			<img class="column2" src="images/main/2collageYuto1.jpeg" alt="Product photos of yuto dunks"/>
+			<img class="column2" src="images/main/2collageYuto2.jpeg" alt="Product photos of yuto dunks"/>
+			<img class="column2" src="images/main/2collageYuto3.jpeg" alt="Product photos of yuto dunks"/>
+			<img class="column2" src="images/main/2collageYuto4.jpeg" alt="Product photos of yuto dunks"/>
 		</div>
-		<script src="scripts.js"></script>
-		<script src="mainalert.js"></script>
+		<a id="anchor" href="#TopPageAnchor">Click Text To Go To Top.</a>
+		<script type="text/javascript" src="scripts.js"></script>
+		<script type="text/javascript" src="mainalet.js"></script>
   </body>
 
 </html>
