--- a/Assignments/Assignment4/nike.html
+++ b/Assignments/Assignment4/nike.html
@@ -5,15 +5,16 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<title>Yuto Dunks</title>
 	<link href="stylenike.css" type="text/css" rel="stylesheet" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Gasoek+One&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com"/>
+	<link href="https://fonts.googleapis.com/css2?family=Creepster" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&amp;family=Gasoek+One" rel="stylesheet"/>
 
 
 </head>
 
   <body>
+		<a name="TopPageAnchor"/>
     <div class="header">
       <h1>Nike</h1>
     </div>
@@ -23,37 +24,37 @@
 			<a href="nike.html"><span id="nikePage">Nike</span></a>
 		</div>
 		<div class="main">
-			<img src="images/nike/Woosh.png" alt="">
+			<img src="images/nike/Woosh.png" alt="The nike woosh logo"/>
       <h1>Just Do It</h1>
-      <img id="globe1" src="images/nike/Globe1.png" alt="">
-      <img id="globe2" src="images/nike/Globe1.png" alt="">
-      
+      <img id="globe1" src="images/nike/Globe1.png" alt="Cool globe png"/>
+      <img id="globe2" src="images/nike/Globe1.png" alt="Cool globe png"/>
+
       <div class="gif">
-        <img id="gif1" src="images/nike/s1.gif" alt="">
-        <img id="gif2" src="images/nike/s2.gif" alt="">
-        <img id="gif3" src="images/nike/s3.gif" alt="">
-        <img id="gif4" src="images/nike/s4.gif" alt="">
-        <img id="gif5" src="images/nike/s5.gif" alt="">
-        <img id="gif6" src="images/nike/s6.gif" alt="">
-        <img id="gif7" src="images/nike/s7.gif" alt="">
-        <img id="gif8" src="images/nike/s8.gif" alt="">
-        <img id="gif9" src="images/nike/s9.gif" alt="">
-        <img id="gif10" src="images/nike/s10.gif" alt="">
-        <img id="gif11" src="images/nike/s11.gif" alt="">
-        <img id="gif12" src="images/nike/s12.gif" alt="">
-        <img id="gif13" src="images/nike/s13.gif" alt="">
-        <img id="gif14" src="images/nike/s14.gif" alt="">
-        <img id="gif15" src="images/nike/s15.gif" alt="">
+        <img id="gif1" src="images/nike/s1.gif" alt="Random gifs"/>
+        <img id="gif2" src="images/nike/s2.gif" alt="Random gifs"/>
+        <img id="gif3" src="images/nike/s3.gif" alt="Random gifs"/>
+        <img id="gif4" src="images/nike/s4.gif" alt="Random gifs"/>
+        <img id="gif5" src="images/nike/s5.gif" alt="Random gifs"/>
+        <img id="gif6" src="images/nike/s6.gif" alt="Random gifs"/>
+        <img id="gif7" src="images/nike/s7.gif" alt="Random gifs"/>
+        <img id="gif8" src="images/nike/s8.gif" alt="Random gifs"/>
+        <img id="gif9" src="images/nike/s9.gif" alt="Random gifs"/>
+        <img id="gif10" src="images/nike/s10.gif" alt="Random gifs"/>
+        <img id="gif11" src="images/nike/s11.gif" alt="Random gifs"/>
+        <img id="gif12" src="images/nike/s12.gif" alt="Random gifs"/>
+        <img id="gif13" src="images/nike/s13.gif" alt="Random gifs"/>
+        <img id="gif14" src="images/nike/s14.gif" alt="Random gifs"/>
+        <img id="gif15" src="images/nike/s15.gif" alt="Random gifs"/>
       </div>
       <div class="sparkle">
-        <img id="sparkle1" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle2" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle3" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle4" src="images/nike/Sparkle.png" alt="">
-        <img id="sparkle5" src="images/nike/Sparkle.png" alt="">
+        <img id="sparkle1" src="images/nike/Sparkle.png" alt="Sparkle graphic"/>
+        <img id="sparkle2" src="images/nike/Sparkle.png" alt="Sparkle graphic"/>
+        <img id="sparkle3" src="images/nike/Sparkle.png" alt="Sparkle graphic"/>
+        <img id="sparkle4" src="images/nike/Sparkle.png" alt="Sparkle graphic"/>
+        <img id="sparkle5" src="images/nike/Sparkle.png" alt="Sparkle graphic"/>
       </div>
       <div class="Main2">
-        <img id="tech1" src="images/nike/tech1.png" alt="">
+        <img id="tech1" src="images/nike/tech1.png" alt="Nike tech product photo"/>
 				<p id="p">
 						Nike, Inc. is an American multinational association that is involved in the design, development, manufacturing and worldwide marketing and sales of apparel, footwear, accessories, equipment and services. The company’s world headquarters are situated near Beaverton, Oregon, in the Portland metropolitan area (USA). It is a major producer of sports equipment and one of the world’s largest suppliers of athletic shoes and apparel. It employs more than 44,000 people worldwide and in 2014 the brand alone was valued as $19 billion (€17,5 billion), making it the most valuable brand between sports businesses.Founded by Bill Bowerman and Phil Knight on January 25 1964, as Blue Ribbon Sports, the company became officially Nike, Inc. on May 30 1971. The company was named after the Greek goddess of victory, Nike (Νίκη). Apart from its own brand, Nike market its products under Nike Pro, Nike+, Nike Golf, Nike Blazers, Air Jordan, Air Max and other as well as subsidiaries including brands  Jordan, Hurley Int. and Converse. Nike sponsors many high-profile athletes and sports teams around the world, with the highly recognized trademarks of “Just Do It” and the Swoosh logo (which represents the wing of the Greek goddess Nike).
 				</p>
@@ -75,13 +76,12 @@
 						<span id="jst"></span>
 					</div>
 				</div>
-				<img src="images/nike/nikebanner.jpg" alt="">
+				 <a href="#TopPageAnchor">
+					 <img src="images/nike/nikebanner.jpg" alt="Cool nike graphic"/>
+				</a>
+				<a id="anchor">Click Footer To Go To Top.</a>
       </div>
-
-
-
 		</div>
-
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 
