--- a/Assignments/Assignment4/main.html
+++ b/Assignments/Assignment4/main.html
@@ -90,7 +90,7 @@
 		</div>
 		<a id="anchor" href="#TopPageAnchor">Click Text To Go To Top.</a>
 		<script type="text/javascript" src="scripts.js"></script>
-		<script type="text/javascript" src="mainalet.js"></script>
+		<script type="text/javascript" src="mainalert.js"></script>
   </body>
 
 </html>
